--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_spinkit: ^5.0.0
   flutter_slider_drawer: ^2.0.0
   flutter_easyloading: ^3.0.0
+  shared_preferences: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
